switch to codemirror and cap the height of file explorer so overflow works. Still have subtle issue with cursor on file hover

--- a/src/app/modules/vm/components/editor/editor.component.scss
+++ b/src/app/modules/vm/components/editor/editor.component.scss
@@ -4,8 +4,7 @@
 }
 
 .pane {
-    height: 100%;
-    width: 100%;
+    flex: 1;
 }
 
 .space-bottom {
