--- a/src/app/modules/vm/components/file-explorer/file-explorer.component.scss
+++ b/src/app/modules/vm/components/file-explorer/file-explorer.component.scss
@@ -39,7 +39,7 @@
 }
 
 .explorer__row-expand {
-    flex: 1;
+    height: 500px;
 }
 
 .explorer__gutter {
@@ -58,6 +58,7 @@
     background-color: var(--surface-color);
     color: var(--on-surface-color);
     flex: 1;
+    cursor: inherit;
 }
 
 .explorer__content-header {
@@ -80,17 +81,21 @@
 .explorer__item {
     padding: .1em;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    fill: var(--ui-primary-color);
+    cursor: inherit;
 }
 
 .explorer__item.active {
-    background-color: darken($primary-color, 10%);
+    background-color: var(--ui-secondary-color);
+    color: var(--ui-on-secondary-color);
+    fill: var(--ui-on-secondary-color);
+    cursor: inherit;
 }
 
 .explorer__item:hover {
-    background-color: lighten($primary-color, 20%);
-    color: $font-color;
+    background-color: var(--ui-secondary-color);
+    cursor: inherit;
 }
 
 .explorer__item-content {
@@ -100,11 +105,13 @@
     align-items: center;
     padding: .1em;
     font-size: .75em;
-    cursor: pointer;
+    cursor: inherit;
 }
 
 .explorer__item-content:hover {
-    fill: $font-color;
+    color: var(--ui-on-secondary-color);
+    fill: var(--ui-on-secondary-color);
+    cursor: inherit;
 }
 
 .explorer__icon {
